src/App.css
/* MainContainer */



@media screen and (max-width: 950px) {
    
  
  
    .maincontainer{
    
     
      width: 100%;
      /* Remove overflow-x: hidden; */
      display: flex;
      justify-content: center;
      margin: 0 10px;
      position: relative;

    }


   
   .col-1{
    width: 3%;
    /* display: none; */
    /* overflow-x:scroll; */
    
   }
   
   .col-2{
    width: 100%;

   }

   .toggle button {
    position: fixed;
    font-size: 33px;
    cursor: pointer;
    top: 10px;
    width: 40px;
    background: unset;
    border-radius: 15px;
    border-color: azure;
    top: 50%;
    z-index: 100;
    display: block;
}
}
    
  
  
  
  
  /* FilteredSetting */
  
 

  @media screen and (max-width:850px) {
    .filteredsetting.active {
      width: 70%;
      z-index: 99;
      transition: width 0.5s linear; /* Add a smooth transition for the width property */
    }
    .filteredsetting {
      width: 0; /* Initial width when toggle is false */
      transition: width 0.5s linear; /* Add a smooth transition for the width property */
    }

    .filteredsetting .searchBox{
      width: 0; /* Initial width when toggle is false */
      transition: width 0.5s linear;
      display: none;
    }
   
    
    .filteredsetting.active .searchBox{
        align-items: center;
        height: 100px;
        width: 100%;
        text-align: center;
        margin: 10px auto;
        border: 1px solid white;
        flex-direction: column;
        display: flex;
        align-items: center;
        justify-content: center;
        top: 30px;
        /* position: absolute; */
    }
    #inputSearchBox {
        width: 100px;
        height: 10px;
        border-radius: 15px;
        text-align: center;
        border-radius: 10px;
        background: #222;
        color: white;
        font-size: 4px;
    }

    .searchBtn{
      width: 50px;
      font-size: 8px;
      text-align: center;
    }
    h2{
      display: none;
    }
    .mainbox{
      
        border: 1px solid white;
        width: 100%;
        height: 100%;
       
    }
    .genreBox{
        border: 1px solid white;
        display: grid;
        overflow-wrap:nowrap;
        height: 400px;
        width: 100%;
      
        border-radius: 4px;
        position: absolute;

    }
    .genreBox button{
      width: 40px;
      height: 40px;
      font-size: 8px;
    }
    .resetFilter{
      width: 100px;
      height: 40px;
      font-size: 12px;
      bottom: 5%;
      position: absolute;
      background-color: red;
      z-index: 100;

    }

   
  }


  /* DataCard */
  @media screen and (max-width:600px) {
    .container {
     
      overflow-x: hidden;
      display: grid;
      grid-template-columns: repeat(1,1fr);
      justify-content: space-around;
      background-color: #959191;
      width: 100%;
    }
    .poster {
    display: flex;
    justify-content: center;
    height: 200px;
    width: 200px;
    justify-content: center;
    margin: 0 auto;
    border-radius: 15px;
    background: #222;
    cursor: pointer;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;

    }



   
 
  }

